--- a/WFP.ipynb
+++ b/WFP.ipynb
@@ -3,104 +3,166 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14ca6251",
+   "id": "2c72eee7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# -------------------------\n",
-    "# ⚡ Step 4c (REPLACE existing 4c): Restrict carry-forward to the latest PID+GCB / MPP+GCB rows only\n",
+    "# ⚡ Step 4c (two-step): BF-level then GCB-level restricted carry-forward\n",
+    "# Insert this RIGHT AFTER your existing loop that built `output_records`\n",
+    "# and BEFORE Step 5 (building the dataframe).\n",
     "# -------------------------\n",
-    "# Helper to convert whatever Period/Timestamp to Period[M]\n",
-    "def to_period_month(x):\n",
-    "    if pd.isna(x):\n",
-    "        return pd.NaT\n",
-    "    if isinstance(x, pd.Period):\n",
-    "        return x\n",
-    "    try:\n",
-    "        return pd.Period(pd.to_datetime(x), freq=\"M\")\n",
-    "    except Exception:\n",
-    "        # fallback: try parsing string like '2025-07'\n",
-    "        return pd.Period(str(x)) if pd.notna(x) else pd.NaT\n",
-    "\n",
-    "# Build latest period lookups for rows that have PID and rows that don't (MPP)\n",
-    "pid_latest_map = {}\n",
-    "mpp_latest_map = {}\n",
-    "\n",
-    "if \"PID\" in df.columns and \"GCB\" in df.columns and \"Period Month\" in df.columns:\n",
-    "    pid_df = df[df[\"PID\"].notna()].copy()\n",
-    "    if not pid_df.empty:\n",
-    "        pid_grp = pid_df.groupby([\"PID\", \"GCB\"], dropna=False)[\"Period Month\"].max().reset_index()\n",
-    "        pid_grp[\"PID_k\"] = pid_grp[\"PID\"].astype(str).str.strip()\n",
-    "        pid_grp[\"GCB_k\"] = pid_grp[\"GCB\"].astype(str).str.strip()\n",
-    "        pid_grp[\"Latest_Period\"] = pid_grp[\"Period Month\"].apply(to_period_month)\n",
-    "        pid_latest_map = {\n",
-    "            (r[\"PID_k\"], r[\"GCB_k\"]): r[\"Latest_Period\"] for _, r in pid_grp.iterrows()\n",
-    "        }\n",
-    "\n",
-    "if \"MPP ID\" in df.columns and \"GCB\" in df.columns and \"Period Month\" in df.columns:\n",
-    "    mpp_df = df[df[\"PID\"].isna() & df[\"MPP ID\"].notna()].copy()\n",
-    "    if not mpp_df.empty:\n",
-    "        mpp_grp = mpp_df.groupby([\"MPP ID\", \"GCB\"], dropna=False)[\"Period Month\"].max().reset_index()\n",
-    "        mpp_grp[\"MPP_k\"] = mpp_grp[\"MPP ID\"].astype(str).str.strip()\n",
-    "        mpp_grp[\"GCB_k\"] = mpp_grp[\"GCB\"].astype(str).str.strip()\n",
-    "        mpp_grp[\"Latest_Period\"] = mpp_grp[\"Period Month\"].apply(to_period_month)\n",
-    "        mpp_latest_map = {\n",
-    "            (r[\"MPP_k\"], r[\"GCB_k\"]): r[\"Latest_Period\"] for _, r in mpp_grp.iterrows()\n",
-    "        }\n",
-    "\n",
-    "# Now restrict carry-forward to only those rows whose last filled month equals the latest_period for that PID+GCB (or MPP+GCB)\n",
     "from datetime import datetime as _dt\n",
     "\n",
+    "# Helper to parse label like \"Jul-25\" -> pd.Period\n",
+    "def _lbl_to_period(lbl):\n",
+    "    try:\n",
+    "        return pd.Period(_dt.strptime(lbl, \"%b-%y\"), freq=\"M\")\n",
+    "    except Exception:\n",
+    "        # fallback - try pandas parse\n",
+    "        try:\n",
+    "            return pd.Period(pd.to_datetime(lbl), freq=\"M\")\n",
+    "        except Exception:\n",
+    "            return pd.NaT\n",
+    "\n",
+    "# ---- Build latest maps from raw df ----\n",
+    "# Ensure df['Period Month'] is Period dtype in your main code (you already have)\n",
+    "# Map: latest period per PID+GCB\n",
+    "pid_gcb_latest_map = {}\n",
+    "if {\"PID\", \"GCB\", \"Period Month\"}.issubset(df.columns):\n",
+    "    tmp = df[df[\"PID\"].notna()].copy()\n",
+    "    if not tmp.empty:\n",
+    "        grp = tmp.groupby([\"PID\", \"GCB\"], dropna=False)[\"Period Month\"].max().reset_index()\n",
+    "        for _, r in grp.iterrows():\n",
+    "            pid_k = str(r[\"PID\"]).strip()\n",
+    "            gcb_k = str(r[\"GCB\"]).strip()\n",
+    "            pid_gcb_latest_map[(pid_k, gcb_k)] = r[\"Period Month\"]\n",
+    "\n",
+    "# Map: latest period per MPP+GCB (for rows where PID is missing)\n",
+    "mpp_gcb_latest_map = {}\n",
+    "if {\"MPP ID\", \"GCB\", \"Period Month\"}.issubset(df.columns):\n",
+    "    tmp = df[df[\"PID\"].isna() & df[\"MPP ID\"].notna()].copy()\n",
+    "    if not tmp.empty:\n",
+    "        grp = tmp.groupby([\"MPP ID\", \"GCB\"], dropna=False)[\"Period Month\"].max().reset_index()\n",
+    "        for _, r in grp.iterrows():\n",
+    "            mpp_k = str(r[\"MPP ID\"]).strip()\n",
+    "            gcb_k = str(r[\"GCB\"]).strip()\n",
+    "            mpp_gcb_latest_map[(mpp_k, gcb_k)] = r[\"Period Month\"]\n",
+    "\n",
+    "# Map: latest overall period per PID and per MPP (for GCB-level decision)\n",
+    "pid_latest_map = {}\n",
+    "if {\"PID\", \"Period Month\"}.issubset(df.columns):\n",
+    "    tmp = df[df[\"PID\"].notna()].copy()\n",
+    "    if not tmp.empty:\n",
+    "        grp = tmp.groupby(\"PID\", dropna=False)[\"Period Month\"].max().reset_index()\n",
+    "        for _, r in grp.iterrows():\n",
+    "            pid_latest_map[str(r[\"PID\"]).strip()] = r[\"Period Month\"]\n",
+    "\n",
+    "mpp_latest_map = {}\n",
+    "if {\"MPP ID\", \"Period Month\"}.issubset(df.columns):\n",
+    "    tmp = df[df[\"PID\"].isna() & df[\"MPP ID\"].notna()].copy()\n",
+    "    if not tmp.empty:\n",
+    "        grp = tmp.groupby(\"MPP ID\", dropna=False)[\"Period Month\"].max().reset_index()\n",
+    "        for _, r in grp.iterrows():\n",
+    "            mpp_latest_map[str(r[\"MPP ID\"]).strip()] = r[\"Period Month\"]\n",
+    "\n",
+    "# ---- BF-level pass: only allow carry-forward for BF-row that matches PID+GCB latest ----\n",
     "for record in output_records:\n",
     "    pid = record.get(\"PID\")\n",
     "    mpp = record.get(\"MPP ID\")\n",
     "    gcb = record.get(\"GCB\")\n",
     "\n",
-    "    # normalize keys\n",
-    "    pid_k = str(pid).strip() if pd.notna(pid) and pid is not None else None\n",
-    "    mpp_k = str(mpp).strip() if pd.notna(mpp) and mpp is not None else None\n",
-    "    gcb_k = str(gcb).strip() if pd.notna(gcb) and gcb is not None else None\n",
+    "    pid_k = str(pid).strip() if (pd.notna(pid) and pid is not None) else None\n",
+    "    mpp_k = str(mpp).strip() if (pd.notna(mpp) and mpp is not None) else None\n",
+    "    gcb_k = str(gcb).strip() if (pd.notna(gcb) and gcb is not None) else None\n",
     "\n",
-    "    # determine latest_period for this row (prefer PID lookup, else MPP lookup)\n",
+    "    # Determine latest_period for this PID+GCB or MPP+GCB\n",
     "    latest_period = None\n",
-    "    if pid_k and gcb_k and (pid_k, gcb_k) in pid_latest_map:\n",
-    "        latest_period = pid_latest_map[(pid_k, gcb_k)]\n",
-    "    elif mpp_k and gcb_k and (mpp_k, gcb_k) in mpp_latest_map:\n",
-    "        latest_period = mpp_latest_map[(mpp_k, gcb_k)]\n",
+    "    if pid_k and gcb_k and (pid_k, gcb_k) in pid_gcb_latest_map:\n",
+    "        latest_period = pid_gcb_latest_map[(pid_k, gcb_k)]\n",
+    "    elif mpp_k and gcb_k and (mpp_k, gcb_k) in mpp_gcb_latest_map:\n",
+    "        latest_period = mpp_gcb_latest_map[(mpp_k, gcb_k)]\n",
     "    else:\n",
-    "        # No matching latest info -> skip carry-forward for safety\n",
+    "        # No map entry -> skip (no carry forward)\n",
+    "        # But to be safe, clear future months beyond last filled\n",
+    "        filled = [lbl for lbl in month_labels if record.get(lbl) is not None]\n",
+    "        if filled:\n",
+    "            last_idx = month_labels.index(filled[-1])\n",
+    "            for lbl in month_labels[last_idx+1:]:\n",
+    "                record[lbl] = None\n",
     "        continue\n",
     "\n",
-    "    if pd.isna(latest_period):\n",
-    "        continue\n",
-    "\n",
-    "    # find the last filled month label in this record\n",
+    "    # find last filled month label in this row (after initial population)\n",
     "    filled_months = [lbl for lbl in month_labels if record.get(lbl) is not None]\n",
     "    if not filled_months:\n",
     "        continue\n",
     "    last_filled_lbl = filled_months[-1]\n",
-    "    last_fte = record[last_filled_lbl]\n",
+    "    last_filled_period = _lbl_to_period(last_filled_lbl)\n",
     "\n",
-    "    # convert last_filled_lbl like \"Jul-25\" to Period\n",
-    "    try:\n",
-    "        last_filled_dt = _dt.strptime(last_filled_lbl, \"%b-%y\")\n",
-    "        last_filled_period = pd.Period(last_filled_dt, freq=\"M\")\n",
-    "    except Exception:\n",
-    "        # fallback: try pandas\n",
-    "        last_filled_period = to_period_month(last_filled_lbl)\n",
-    "\n",
-    "    # Only carry-forward if this row's last filled period equals the latest_period for the PID+GCB (or MPP+GCB)\n",
-    "    if last_filled_period == latest_period:\n",
-    "        # carry forward last_fte to all subsequent months in the horizon\n",
+    "    # If this row is NOT the BF-latest for PID+GCB, remove any carried values beyond last_filled\n",
+    "    if last_filled_period != latest_period:\n",
     "        start_idx = month_labels.index(last_filled_lbl) + 1\n",
     "        for lbl in month_labels[start_idx:]:\n",
-    "            record[lbl] = last_fte\n"
+    "            record[lbl] = None\n",
+    "    else:\n",
+    "        # This BF row is the BF-latest for PID+GCB -> keep its existing values (including carry if present)\n",
+    "        # If carry wasn't present, we still want to carry forward from last_filled to end of horizon:\n",
+    "        last_val = record[last_filled_lbl]\n",
+    "        if last_val is not None:\n",
+    "            start_idx = month_labels.index(last_filled_lbl) + 1\n",
+    "            for lbl in month_labels[start_idx:]:\n",
+    "                record[lbl] = last_val\n",
+    "\n",
+    "# ---- GCB-level pass: only the latest GCB (per PID or per MPP) should carry forward further ----\n",
+    "for record in output_records:\n",
+    "    pid = record.get(\"PID\")\n",
+    "    mpp = record.get(\"MPP ID\")\n",
+    "    gcb = record.get(\"GCB\")\n",
+    "\n",
+    "    pid_k = str(pid).strip() if (pd.notna(pid) and pid is not None) else None\n",
+    "    mpp_k = str(mpp).strip() if (pd.notna(mpp) and mpp is not None) else None\n",
+    "    gcb_k = str(gcb).strip() if (pd.notna(gcb) and gcb is not None) else None\n",
+    "\n",
+    "    # determine overall latest period for that PID (or MPP)\n",
+    "    overall_latest = None\n",
+    "    if pid_k and pid_k in pid_latest_map:\n",
+    "        overall_latest = pid_latest_map[pid_k]\n",
+    "    elif mpp_k and mpp_k in mpp_latest_map:\n",
+    "        overall_latest = mpp_latest_map[mpp_k]\n",
+    "    else:\n",
+    "        # no overall info: clear future values beyond last filled\n",
+    "        filled = [lbl for lbl in month_labels if record.get(lbl) is not None]\n",
+    "        if filled:\n",
+    "            last_idx = month_labels.index(filled[-1])\n",
+    "            for lbl in month_labels[last_idx+1:]:\n",
+    "                record[lbl] = None\n",
+    "        continue\n",
+    "\n",
+    "    # find last filled month label in this row (after BF-pass adjustments)\n",
+    "    filled_months = [lbl for lbl in month_labels if record.get(lbl) is not None]\n",
+    "    if not filled_months:\n",
+    "        continue\n",
+    "    last_filled_lbl = filled_months[-1]\n",
+    "    last_filled_period = _lbl_to_period(last_filled_lbl)\n",
+    "\n",
+    "    # If this row's last filled period is NOT the overall latest for PID -> clear months beyond last_filled\n",
+    "    if last_filled_period != overall_latest:\n",
+    "        start_idx = month_labels.index(last_filled_lbl) + 1\n",
+    "        for lbl in month_labels[start_idx:]:\n",
+    "            record[lbl] = None\n",
+    "    else:\n",
+    "        # This row is the overall latest for PID -> ensure carry forward from last_filled to horizon end\n",
+    "        last_val = record[last_filled_lbl]\n",
+    "        if last_val is not None:\n",
+    "            start_idx = month_labels.index(last_filled_lbl) + 1\n",
+    "            for lbl in month_labels[start_idx:]:\n",
+    "                record[lbl] = last_val\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75dd4e33",
+   "id": "0e9e0fe8",
    "metadata": {},
    "outputs": [],
    "source": [
