--- a/WFP.ipynb
+++ b/WFP.ipynb
@@ -3,166 +3,71 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c72eee7",
+   "id": "98df8149",
    "metadata": {},
    "outputs": [],
    "source": [
     "# -------------------------\n",
-    "# ⚡ Step 4c (two-step): BF-level then GCB-level restricted carry-forward\n",
-    "# Insert this RIGHT AFTER your existing loop that built `output_records`\n",
-    "# and BEFORE Step 5 (building the dataframe).\n",
+    "# ⚡ Step 4c. Restrict carry-forward: only latest BF/GCB row per PID continues\n",
     "# -------------------------\n",
-    "from datetime import datetime as _dt\n",
+    "def lbl_to_period(lbl):\n",
+    "    return pd.Period(datetime.strptime(lbl, \"%b-%y\"), freq=\"M\")\n",
     "\n",
-    "# Helper to parse label like \"Jul-25\" -> pd.Period\n",
-    "def _lbl_to_period(lbl):\n",
-    "    try:\n",
-    "        return pd.Period(_dt.strptime(lbl, \"%b-%y\"), freq=\"M\")\n",
-    "    except Exception:\n",
-    "        # fallback - try pandas parse\n",
-    "        try:\n",
-    "            return pd.Period(pd.to_datetime(lbl), freq=\"M\")\n",
-    "        except Exception:\n",
-    "            return pd.NaT\n",
+    "# Group records by PID (ignore MPP for now – can extend if needed)\n",
+    "from collections import defaultdict\n",
+    "pid_records = defaultdict(list)\n",
+    "for rec in output_records:\n",
+    "    pid = rec.get(\"PID\")\n",
+    "    if pid:\n",
+    "        pid_records[str(pid).strip()].append(rec)\n",
     "\n",
-    "# ---- Build latest maps from raw df ----\n",
-    "# Ensure df['Period Month'] is Period dtype in your main code (you already have)\n",
-    "# Map: latest period per PID+GCB\n",
-    "pid_gcb_latest_map = {}\n",
-    "if {\"PID\", \"GCB\", \"Period Month\"}.issubset(df.columns):\n",
-    "    tmp = df[df[\"PID\"].notna()].copy()\n",
-    "    if not tmp.empty:\n",
-    "        grp = tmp.groupby([\"PID\", \"GCB\"], dropna=False)[\"Period Month\"].max().reset_index()\n",
-    "        for _, r in grp.iterrows():\n",
-    "            pid_k = str(r[\"PID\"]).strip()\n",
-    "            gcb_k = str(r[\"GCB\"]).strip()\n",
-    "            pid_gcb_latest_map[(pid_k, gcb_k)] = r[\"Period Month\"]\n",
+    "for pid, rows in pid_records.items():\n",
+    "    if len(rows) == 1:\n",
+    "        continue  # nothing special\n",
     "\n",
-    "# Map: latest period per MPP+GCB (for rows where PID is missing)\n",
-    "mpp_gcb_latest_map = {}\n",
-    "if {\"MPP ID\", \"GCB\", \"Period Month\"}.issubset(df.columns):\n",
-    "    tmp = df[df[\"PID\"].isna() & df[\"MPP ID\"].notna()].copy()\n",
-    "    if not tmp.empty:\n",
-    "        grp = tmp.groupby([\"MPP ID\", \"GCB\"], dropna=False)[\"Period Month\"].max().reset_index()\n",
-    "        for _, r in grp.iterrows():\n",
-    "            mpp_k = str(r[\"MPP ID\"]).strip()\n",
-    "            gcb_k = str(r[\"GCB\"]).strip()\n",
-    "            mpp_gcb_latest_map[(mpp_k, gcb_k)] = r[\"Period Month\"]\n",
+    "    # Find the latest filled period per row\n",
+    "    row_latest = {}\n",
+    "    for rec in rows:\n",
+    "        filled = [lbl for lbl in month_labels if rec.get(lbl) is not None]\n",
+    "        if not filled:\n",
+    "            continue\n",
+    "        last_lbl = filled[-1]\n",
+    "        row_latest[id(rec)] = lbl_to_period(last_lbl)\n",
     "\n",
-    "# Map: latest overall period per PID and per MPP (for GCB-level decision)\n",
-    "pid_latest_map = {}\n",
-    "if {\"PID\", \"Period Month\"}.issubset(df.columns):\n",
-    "    tmp = df[df[\"PID\"].notna()].copy()\n",
-    "    if not tmp.empty:\n",
-    "        grp = tmp.groupby(\"PID\", dropna=False)[\"Period Month\"].max().reset_index()\n",
-    "        for _, r in grp.iterrows():\n",
-    "            pid_latest_map[str(r[\"PID\"]).strip()] = r[\"Period Month\"]\n",
-    "\n",
-    "mpp_latest_map = {}\n",
-    "if {\"MPP ID\", \"Period Month\"}.issubset(df.columns):\n",
-    "    tmp = df[df[\"PID\"].isna() & df[\"MPP ID\"].notna()].copy()\n",
-    "    if not tmp.empty:\n",
-    "        grp = tmp.groupby(\"MPP ID\", dropna=False)[\"Period Month\"].max().reset_index()\n",
-    "        for _, r in grp.iterrows():\n",
-    "            mpp_latest_map[str(r[\"MPP ID\"]).strip()] = r[\"Period Month\"]\n",
-    "\n",
-    "# ---- BF-level pass: only allow carry-forward for BF-row that matches PID+GCB latest ----\n",
-    "for record in output_records:\n",
-    "    pid = record.get(\"PID\")\n",
-    "    mpp = record.get(\"MPP ID\")\n",
-    "    gcb = record.get(\"GCB\")\n",
-    "\n",
-    "    pid_k = str(pid).strip() if (pd.notna(pid) and pid is not None) else None\n",
-    "    mpp_k = str(mpp).strip() if (pd.notna(mpp) and mpp is not None) else None\n",
-    "    gcb_k = str(gcb).strip() if (pd.notna(gcb) and gcb is not None) else None\n",
-    "\n",
-    "    # Determine latest_period for this PID+GCB or MPP+GCB\n",
-    "    latest_period = None\n",
-    "    if pid_k and gcb_k and (pid_k, gcb_k) in pid_gcb_latest_map:\n",
-    "        latest_period = pid_gcb_latest_map[(pid_k, gcb_k)]\n",
-    "    elif mpp_k and gcb_k and (mpp_k, gcb_k) in mpp_gcb_latest_map:\n",
-    "        latest_period = mpp_gcb_latest_map[(mpp_k, gcb_k)]\n",
-    "    else:\n",
-    "        # No map entry -> skip (no carry forward)\n",
-    "        # But to be safe, clear future months beyond last filled\n",
-    "        filled = [lbl for lbl in month_labels if record.get(lbl) is not None]\n",
-    "        if filled:\n",
-    "            last_idx = month_labels.index(filled[-1])\n",
-    "            for lbl in month_labels[last_idx+1:]:\n",
-    "                record[lbl] = None\n",
+    "    if not row_latest:\n",
     "        continue\n",
     "\n",
-    "    # find last filled month label in this row (after initial population)\n",
-    "    filled_months = [lbl for lbl in month_labels if record.get(lbl) is not None]\n",
-    "    if not filled_months:\n",
-    "        continue\n",
-    "    last_filled_lbl = filled_months[-1]\n",
-    "    last_filled_period = _lbl_to_period(last_filled_lbl)\n",
+    "    # Find the max (latest) among them\n",
+    "    overall_latest = max(row_latest.values())\n",
     "\n",
-    "    # If this row is NOT the BF-latest for PID+GCB, remove any carried values beyond last_filled\n",
-    "    if last_filled_period != latest_period:\n",
-    "        start_idx = month_labels.index(last_filled_lbl) + 1\n",
-    "        for lbl in month_labels[start_idx:]:\n",
-    "            record[lbl] = None\n",
-    "    else:\n",
-    "        # This BF row is the BF-latest for PID+GCB -> keep its existing values (including carry if present)\n",
-    "        # If carry wasn't present, we still want to carry forward from last_filled to end of horizon:\n",
-    "        last_val = record[last_filled_lbl]\n",
-    "        if last_val is not None:\n",
-    "            start_idx = month_labels.index(last_filled_lbl) + 1\n",
-    "            for lbl in month_labels[start_idx:]:\n",
-    "                record[lbl] = last_val\n",
-    "\n",
-    "# ---- GCB-level pass: only the latest GCB (per PID or per MPP) should carry forward further ----\n",
-    "for record in output_records:\n",
-    "    pid = record.get(\"PID\")\n",
-    "    mpp = record.get(\"MPP ID\")\n",
-    "    gcb = record.get(\"GCB\")\n",
-    "\n",
-    "    pid_k = str(pid).strip() if (pd.notna(pid) and pid is not None) else None\n",
-    "    mpp_k = str(mpp).strip() if (pd.notna(mpp) and mpp is not None) else None\n",
-    "    gcb_k = str(gcb).strip() if (pd.notna(gcb) and gcb is not None) else None\n",
-    "\n",
-    "    # determine overall latest period for that PID (or MPP)\n",
-    "    overall_latest = None\n",
-    "    if pid_k and pid_k in pid_latest_map:\n",
-    "        overall_latest = pid_latest_map[pid_k]\n",
-    "    elif mpp_k and mpp_k in mpp_latest_map:\n",
-    "        overall_latest = mpp_latest_map[mpp_k]\n",
-    "    else:\n",
-    "        # no overall info: clear future values beyond last filled\n",
-    "        filled = [lbl for lbl in month_labels if record.get(lbl) is not None]\n",
-    "        if filled:\n",
-    "            last_idx = month_labels.index(filled[-1])\n",
-    "            for lbl in month_labels[last_idx+1:]:\n",
-    "                record[lbl] = None\n",
-    "        continue\n",
-    "\n",
-    "    # find last filled month label in this row (after BF-pass adjustments)\n",
-    "    filled_months = [lbl for lbl in month_labels if record.get(lbl) is not None]\n",
-    "    if not filled_months:\n",
-    "        continue\n",
-    "    last_filled_lbl = filled_months[-1]\n",
-    "    last_filled_period = _lbl_to_period(last_filled_lbl)\n",
-    "\n",
-    "    # If this row's last filled period is NOT the overall latest for PID -> clear months beyond last_filled\n",
-    "    if last_filled_period != overall_latest:\n",
-    "        start_idx = month_labels.index(last_filled_lbl) + 1\n",
-    "        for lbl in month_labels[start_idx:]:\n",
-    "            record[lbl] = None\n",
-    "    else:\n",
-    "        # This row is the overall latest for PID -> ensure carry forward from last_filled to horizon end\n",
-    "        last_val = record[last_filled_lbl]\n",
-    "        if last_val is not None:\n",
-    "            start_idx = month_labels.index(last_filled_lbl) + 1\n",
-    "            for lbl in month_labels[start_idx:]:\n",
-    "                record[lbl] = last_val\n"
+    "    # Apply restriction\n",
+    "    for rec in rows:\n",
+    "        last_period = row_latest.get(id(rec))\n",
+    "        if last_period is None:\n",
+    "            continue\n",
+    "        if last_period != overall_latest:\n",
+    "            # stop carry-forward: clear all months beyond last filled\n",
+    "            filled = [lbl for lbl in month_labels if rec.get(lbl) is not None]\n",
+    "            if filled:\n",
+    "                last_lbl = filled[-1]\n",
+    "                idx = month_labels.index(last_lbl)\n",
+    "                for lbl in month_labels[idx+1:]:\n",
+    "                    rec[lbl] = None\n",
+    "        else:\n",
+    "            # This is the latest row → ensure carry-forward till horizon end\n",
+    "            filled = [lbl for lbl in month_labels if rec.get(lbl) is not None]\n",
+    "            if filled:\n",
+    "                last_lbl = filled[-1]\n",
+    "                last_val = rec[last_lbl]\n",
+    "                idx = month_labels.index(last_lbl)\n",
+    "                for lbl in month_labels[idx+1:]:\n",
+    "                    rec[lbl] = last_val\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e9e0fe8",
+   "id": "5ad43af7",
    "metadata": {},
    "outputs": [],
    "source": [
