--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f77173d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Prepare billed CCs from base_df_updated ---\n",
+    "billed_cc_map = (\n",
+    "    base_df_updated.loc[\n",
+    "        base_df_updated['Category for Static'].astype(str).str.lower() == 'billed',\n",
+    "        ['Cost center']\n",
+    "    ]\n",
+    "    .assign(Cost_center_str=lambda d: d['Cost center'].astype(str))  # helper string col\n",
+    ")\n",
+    "\n",
+    "# --- Prepare gsc_df with helper string col for matching ---\n",
+    "gsc_df['_CostCentre_str'] = gsc_df['Cost Centre'].astype(str)\n",
+    "\n",
+    "# --- Prepare cognos_df with helper string col ---\n",
+    "cognos_df['_CostCode_str'] = cognos_df['Cost Code'].astype(str)\n",
+    "\n",
+    "# --- Lookup step 1: mark whether Cost Centre is in billed set ---\n",
+    "billed_set = set(billed_cc_map['Cost_center_str'])\n",
+    "gsc_df['Lookup for Billed CC'] = gsc_df['_CostCentre_str'].apply(\n",
+    "    lambda cc: gsc_df.loc[gsc_df['_CostCentre_str'] == cc, 'Cost Centre'].iloc[0]\n",
+    "    if cc in billed_set else \"N/A\"\n",
+    ")\n",
+    "\n",
+    "# --- Lookup step 2: fetch Manager Ops from Cognos using string keys ---\n",
+    "manager_ops_map = dict(zip(cognos_df['_CostCode_str'], cognos_df['Manager Operations']))\n",
+    "gsc_df['Manager Ops'] = gsc_df['_CostCentre_str'].map(manager_ops_map).fillna(\"N/A\")\n",
+    "\n",
+    "# --- Cleanup helper cols ---\n",
+    "gsc_df.drop(columns=['_CostCentre_str'], inplace=True)\n",
+    "cognos_df.drop(columns=['_CostCode_str'], inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4cfac6df",
    "metadata": {},
    "outputs": [],
