--- a/CT.ipynb
+++ b/CT.ipynb
@@ -3,6 +3,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b850021d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import win32com.client as win32\n",
+    "\n",
+    "def set_active_cell_b3(folder_path):\n",
+    "    excel = win32.Dispatch(\"Excel.Application\")\n",
+    "    excel.Visible = False\n",
+    "    excel.DisplayAlerts = False\n",
+    "\n",
+    "    # Loop through all Excel files in the folder\n",
+    "    for filename in os.listdir(folder_path):\n",
+    "        if filename.endswith((\".xlsx\", \".xlsm\", \".xls\")):  # Excel file types\n",
+    "            file_path = os.path.join(folder_path, filename)\n",
+    "            print(f\"Processing: {file_path}\")\n",
+    "\n",
+    "            try:\n",
+    "                wb = excel.Workbooks.Open(file_path)\n",
+    "\n",
+    "                # Loop through each sheet and select B3\n",
+    "                for ws in wb.Sheets:\n",
+    "                    ws.Activate()\n",
+    "                    ws.Range(\"B3\").Select()\n",
+    "\n",
+    "                # Save changes and close\n",
+    "                wb.Save()\n",
+    "                wb.Close(SaveChanges=True)\n",
+    "\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error processing {filename}: {e}\")\n",
+    "\n",
+    "    excel.Quit()\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    folder_path = r\"C:\\Users\\YourName\\Documents\\ExcelFiles\"  # change your path\n",
+    "    set_active_cell_b3(folder_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5c0ae89a",
    "metadata": {},
    "outputs": [],
