--- a/CT.ipynb
+++ b/CT.ipynb
@@ -3,44 +3,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b850021d",
+   "id": "c7c7f615",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import win32com.client as win32\n",
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.worksheet.views import Selection\n",
     "\n",
-    "def set_active_cell_b3(folder_path):\n",
-    "    excel = win32.Dispatch(\"Excel.Application\")\n",
-    "    excel.Visible = False\n",
-    "    excel.DisplayAlerts = False\n",
-    "\n",
-    "    # Loop through all Excel files in the folder\n",
+    "def set_active_cell_b3_openpyxl(folder_path):\n",
     "    for filename in os.listdir(folder_path):\n",
-    "        if filename.endswith((\".xlsx\", \".xlsm\", \".xls\")):  # Excel file types\n",
-    "            file_path = os.path.join(folder_path, filename)\n",
-    "            print(f\"Processing: {file_path}\")\n",
+    "        if not filename.lower().endswith((\".xlsx\", \".xlsm\")):\n",
+    "            continue\n",
+    "        file_path = os.path.join(folder_path, filename)\n",
+    "        print(\"Processing:\", file_path)\n",
+    "        try:\n",
+    "            if filename.lower().endswith(\".xlsm\"):\n",
+    "                wb = load_workbook(file_path, keep_vba=True)\n",
+    "            else:\n",
+    "                wb = load_workbook(file_path)\n",
     "\n",
-    "            try:\n",
-    "                wb = excel.Workbooks.Open(file_path)\n",
+    "            for ws in wb.worksheets:\n",
+    "                # Create/set selection so Excel shows B3 when you switch to this sheet\n",
+    "                sel = Selection()\n",
+    "                sel.activeCell = \"B3\"\n",
+    "                sel.sqref = \"B3\"\n",
+    "                ws.sheet_view.selection = [sel]\n",
     "\n",
-    "                # Loop through each sheet and select B3\n",
-    "                for ws in wb.Sheets:\n",
-    "                    ws.Activate()\n",
-    "                    ws.Range(\"B3\").Select()\n",
+    "            # Optionally: set the first sheet to be the active sheet when file is opened\n",
+    "            # wb.active = 0   # uncomment if you want the first sheet to be the open-active sheet\n",
     "\n",
-    "                # Save changes and close\n",
-    "                wb.Save()\n",
-    "                wb.Close(SaveChanges=True)\n",
-    "\n",
-    "            except Exception as e:\n",
-    "                print(f\"Error processing {filename}: {e}\")\n",
-    "\n",
-    "    excel.Quit()\n",
+    "            wb.save(file_path)\n",
+    "        except Exception as e:\n",
+    "            print(\"  Failed to process:\", e)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    folder_path = r\"C:\\Users\\YourName\\Documents\\ExcelFiles\"  # change your path\n",
-    "    set_active_cell_b3(folder_path)\n"
+    "    folder_path = r\"C:\\Path\\To\\Your\\Folder\"\n",
+    "    set_active_cell_b3_openpyxl(folder_path)\n"
    ]
   },
   {
