--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,77 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fcfd1de8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.styles import Font, PatternFill\n",
+    "\n",
+    "# === 1. Input/Output Paths ===\n",
+    "input_file = r\"Input\\myfile.xlsx\"   # user’s selected file\n",
+    "output_folder = \"Output\"\n",
+    "os.makedirs(output_folder, exist_ok=True)\n",
+    "\n",
+    "output_file = os.path.join(output_folder, os.path.basename(input_file))\n",
+    "\n",
+    "# === 2. Read / Process Data ===\n",
+    "# Example: read two sheets, modify them, create new df\n",
+    "df1 = pd.read_excel(input_file, sheet_name=\"Sheet1\")\n",
+    "df2 = pd.read_excel(input_file, sheet_name=\"Sheet2\")\n",
+    "\n",
+    "# Process / create new dfs (example only)\n",
+    "df1[\"NewCol\"] = \"Processed\"\n",
+    "df2[\"NewCol\"] = \"Updated\"\n",
+    "df_new = pd.DataFrame({\"A\": [1, 2], \"B\": [3, 4]})\n",
+    "\n",
+    "# === 3. Write Back to Output File ===\n",
+    "if not os.path.exists(output_file):\n",
+    "    mode = \"w\"\n",
+    "    if_sheet_exists = None\n",
+    "else:\n",
+    "    mode = \"a\"\n",
+    "    if_sheet_exists = \"replace\"\n",
+    "\n",
+    "with pd.ExcelWriter(output_file, engine=\"openpyxl\", mode=mode, if_sheet_exists=if_sheet_exists) as writer:\n",
+    "    df1.to_excel(writer, sheet_name=\"Sheet1\", index=False)   # replace old\n",
+    "    df2.to_excel(writer, sheet_name=\"Sheet2\", index=False)   # replace old\n",
+    "    df_new.to_excel(writer, sheet_name=\"New_Sheet\", index=False)  # new sheet\n",
+    "\n",
+    "# === 4. Formatting Headers, Width, Filters ===\n",
+    "wb = load_workbook(output_file)\n",
+    "\n",
+    "for sheet_name in wb.sheetnames:\n",
+    "    ws = wb[sheet_name]\n",
+    "\n",
+    "    # Header formatting\n",
+    "    header_fill = PatternFill(start_color=\"ADD8E6\", end_color=\"ADD8E6\", fill_type=\"solid\")\n",
+    "    for cell in ws[1]:\n",
+    "        cell.font = Font(bold=True)\n",
+    "        cell.fill = header_fill\n",
+    "\n",
+    "    # Column width = 25\n",
+    "    for col in ws.columns:\n",
+    "        col_letter = col[0].column_letter\n",
+    "        ws.column_dimensions[col_letter].width = 25\n",
+    "\n",
+    "    # Autofilter\n",
+    "    max_col = ws.max_column\n",
+    "    max_row = ws.max_row\n",
+    "    ws.auto_filter.ref = f\"A1:{ws.cell(row=1, column=max_col).column_letter}{max_row}\"\n",
+    "\n",
+    "    # Freeze header row\n",
+    "    ws.freeze_panes = \"A2\"\n",
+    "\n",
+    "# Save back\n",
+    "wb.save(output_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f77173d6",
    "metadata": {},
    "outputs": [],
