--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcfd1de8",
+   "id": "e8d1d498",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "import pandas as pd\n",
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.styles import PatternFill, Font\n",
+    "\n",
+    "def update_excel_with_copy(input_file, dfs_to_update: dict):\n",
+    "    \"\"\"\n",
+    "    input_file : str → path to original workbook\n",
+    "    dfs_to_update : dict {sheet_name: dataframe} — sheets to replace or add\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # 1. Create copy with \"_output\"\n",
+    "    base, ext = os.path.splitext(input_file)\n",
+    "    output_file = f\"{base}_output{ext}\"\n",
+    "    shutil.copy(input_file, output_file)\n",
+    "\n",
+    "    # 2. Load the copy\n",
+    "    book = load_workbook(output_file)\n",
+    "    writer = pd.ExcelWriter(output_file, engine=\"openpyxl\")\n",
+    "    writer.book = book\n",
+    "    writer.sheets = {ws.title: ws for ws in book.worksheets}\n",
+    "\n",
+    "    # 3. Replace/add selected sheets\n",
+    "    for sheet_name, df in dfs_to_update.items():\n",
+    "        if sheet_name in writer.sheets:\n",
+    "            # remove existing sheet\n",
+    "            std = writer.book[sheet_name]\n",
+    "            writer.book.remove(std)\n",
+    "        # create new sheet and write\n",
+    "        df.to_excel(writer, sheet_name=sheet_name, index=False)\n",
+    "\n",
+    "        # formatting\n",
+    "        ws = writer.book[sheet_name]\n",
+    "        for cell in ws[1]:  # header row\n",
+    "            cell.font = Font(bold=True)\n",
+    "            cell.fill = PatternFill(start_color=\"ADD8E6\", end_color=\"ADD8E6\", fill_type=\"solid\")\n",
+    "        ws.auto_filter.ref = ws.dimensions\n",
+    "        for col in ws.columns:\n",
+    "            col_letter = col[0].column_letter\n",
+    "            ws.column_dimensions[col_letter].width = 25\n",
+    "\n",
+    "    # 4. Save\n",
+    "    writer.close()\n",
+    "\n",
+    "    print(f\"✅ Updated workbook saved as: {output_file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4eb909ba",
    "metadata": {},
    "outputs": [],
    "source": [
